@@ -39,7 +39,7 @@
         "manual-inventory-sort >= 2.2.5",
         "Milestones >= 1.3.4",
         "ModuleInserter >= 5.2.4",
-        "PavementDriveAssistContinued >= 3.2.0",
+        "PavementDriveAssistContinued >= 4.0.0",
         "PipeVisualizer >= 1.0.4",
         "QueueToFrontNG >= 0.18.3",
         "QuickItemSearch >= 2.1.4",
